--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,32 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
+    <ion-title style = "background-color: #2F2F2F">
+       <p style = "color: white">The Bookstore</p>
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content padding style = "background-color: #D9D9D9"> 
+  <ion-list>
+
+    <ion-item>
+      <ion-input [(ngModel)]="correo" placeholder="Correo"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input [(ngModel)]="contra" type="password" placeholder="Contraseña"></ion-input>
+    </ion-item>
+  </ion-list>
+
+  <button ion-button block color="dark" (click)="Sesion()">Iniciar Sesión</button>
+  <button ion-button block color="dark" (click)="Registro()">Registrarse</button>
+
+  <ion-list>
+    <ion-item *ngFor="let u of usuarios">
+      <ion-card>
+        {{u.correo}}
+        {{u.contra}}
+      </ion-card>
+    </ion-item>
+  </ion-list>
+
 </ion-content>
